<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#42000000"
   >

  <LinearLayout
      android:id="@+id/topController"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:orientation="horizontal"
      android:background="#42000000">
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_icon"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_btn"
        app:tint="@color/white"/>
    <TextView
        android:id="@+id/videoTitle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/video_name"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:textStyle="bold"/>
    <ImageButton
        android:id="@+id/moreFeatures"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/menu_icon"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/menu"
        app:tint="@color/white"
        android:layout_marginEnd="50dp"
        android:padding="10dp"/>
  </LinearLayout>




    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/play_icon"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/play_btn"
        app:tint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>





  <LinearLayout
      android:id="@+id/bottomController"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:orientation="horizontal"
      android:gravity="end|bottom">
    <ImageButton
        android:id="@+id/orientationBtn"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/orientation_icon"
        android:contentDescription="@string/orientation"
        app:tint="@color/white"/>
    <ImageButton
        android:id="@+id/repeatBtn"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/controls_repeat_off"
        android:contentDescription="@string/repeat_btn"
        app:tint="@color/white"/>
    <ImageButton
        android:id="@+id/prevBtn"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/previous_icon"
        android:contentDescription="@string/prev_btn"
        app:tint="@color/white"
        />
    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/next_icon"
        android:contentDescription="@string/next_btn"
        app:tint="@color/white"
        android:rotation="180"
        />
    <ImageButton
        android:id="@+id/fullscreenBtn"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/fullscreen_icon"
        android:contentDescription="@string/fullscreen_btn"
        app:tint="@color/white"

        />
  </LinearLayout>

<com.google.android.exoplayer2.ui.DefaultTimeBar
  android:id="@+id/exo_progress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:scrubber_color="@color/white"
    app:unplayed_color="#80FFFFFF"
    app:buffered_color="#80FFFFFF"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.444"
    app:layout_constraintStart_toStartOf="parent"
    app:played_color="@color/white"
    app:scrubber_enabled_size="15dp"
    app:scrubber_disabled_size="10dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="40dp"/>


  <LinearLayout
    android:layout_width="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">



    <TextView android:id="@id/exo_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"

        android:textColor="@color/white"
        android:text="@string/duration"
        android:layout_margin="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/semi_colon"
        android:layout_marginVertical="10dp"/>


    <TextView android:id="@id/exo_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="16sp"
      android:textStyle="bold"
      android:textColor="@color/white"
        android:text="@string/loading"
        android:layout_margin="10dp"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
